--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -60,6 +60,13 @@ jobs:
 
       # ----------------------------------------------------------------------------------------------------------------
 
+      - name: Install developer dependencies 🍼
+        uses: py-actions/py-dependency-install@v4
+        with:
+          path: "requirements-dev.txt"
+
+      # ----------------------------------------------------------------------------------------------------------------
+
       - name: Run Tests 🎓
         run: |
           cd test
